--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -69,17 +69,17 @@ jobs:
     needs: [details, check_pypi]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: "3.12"
 
       - name: Install pypa/build
-        run: python3 -m pip install build --user
+        run: python -m pip install build --user
       - name: Build a binary wheel and a source tarball
-        run: python3 -m build
+        run: python -m build
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
