--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,14 @@ requires = [
 ]
 build-backend = "setuptools.build_meta"
 
+[tool.pytest.ini_options]
+filterwarnings = "ignore::DeprecationWarning"
+
+[tool.mypy]
+warn_return_any = true
+warn_unused_configs = true
+ignore_missing_imports = true
+strict = true
+
 [tool.isort]
 profile = "black"
